<resources>
    <string name="app_name">WanAndroid</string>

    <string name="menu_home">首页</string>
    <string name="menu_tag">知识体系</string>
    <string name="menu_me">我的</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="search_hint"> </string>

    <!-- nav_header_home -->
    <string name="user_logout">未登录</string>

    <!-- Bottom Sheet -->
    <string name="user_add">注册账号</string>
    <string name="user_change">切换账号</string>
    <string name="app_version">v1.0</string>
    <string name="title_activity_web">WebActivity</string>
    <string name="app_top">置顶</string>
    <string name="app_new">新</string>
    <string name="app_tag_placeholder">标签</string>
    <string name="app_tag">%s/%s</string>
    <string name="title_activity_search">SearchActivity</string>

    <!--搜索-->
    <string name="search_title">搜索</string>
    <string name="fire_search">热搜</string>

    <!-- Me -->
    <string name="me_login_or_register">登录/注册</string>
    <string name="me_collection">收藏集</string>
    <string name="me_night_mode">夜晚模式</string>
    <string name="me_setting">设置</string>
    <string name="me_about">关于</string>
    <string name="me_logout">退出登录</string>

    <!-- Login -->
    <string name="login_title">登录</string>
    <string name="title_activity_login">登录</string>
    <string name="prompt_username">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- About -->
    <string name="about_github">Github</string>
    <string name="about_author">作者</string>
    <string name="about_version">版本</string>
    <string name="about_dd">daidong</string>
    <string name="about_github_account">dddddd1102</string>
</resources>
