<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_bottom_sheet"
        android:orientation="vertical"
        android:paddingTop="12dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">

            <TextView
                android:id="@+id/tv_slog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:gravity="center"
                android:text="@string/app_name" />

            <ImageView
                android:id="@+id/iv_user_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_slog"
                android:contentDescription="@string/app_name"
                app:srcCompat="@mipmap/ic_launcher_round" />

            <TextView
                android:id="@+id/tv_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_slog"
                android:layout_marginStart="16dp"
                android:layout_marginTop="26dp"
                android:layout_toEndOf="@+id/iv_user_logo"
                android:text="@string/app_name"
                android:textSize="@dimen/primary_text_size" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:id="@+id/tv_user_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_person_add_black"
                android:drawablePadding="12dp"
                android:gravity="center"
                android:text="@string/user_add"
                android:textSize="@dimen/secondary_text_size" />

            <TextView
                android:id="@+id/tv_user_change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:drawableStart="@drawable/ic_person_add_black"
                android:drawablePadding="12dp"
                android:gravity="center"
                android:text="@string/user_change"
                android:textSize="@dimen/secondary_text_size" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/app_version"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/third_text_size" />
    </LinearLayout>


</android.support.v4.widget.NestedScrollView>
