<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="5dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingTop="10dp"
        android:paddingEnd="16dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/tv_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_person"
            android:gravity="center_vertical"
            android:textSize="@dimen/secondary_text_size"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:ignore="MissingConstraints"
            tools:text="作者" />

        <TextView
            android:id="@+id/tv_chapter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/secondary_text_size"
            app:layout_constraintRight_toRightOf="parent"
            tools:ignore="MissingConstraints"
            tools:text="开发环境" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="@dimen/primary_text_size"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_author"
            tools:text="各大互联网公司对外分享链接汇总|不可伉俪，MockAPI永久下限" />

        <com.dd.wanandroid.ui.view.TagView
            android:id="@+id/tv_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:border_radius="4dp"
            app:border_width="1dp"
            app:horizontal_padding="4dp"
            app:layout_constraintEnd_toStartOf="@+id/tv_new"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            app:tag_text="@string/app_top"
            app:tag_textColor="@color/white"
            app:tag_textSize="@dimen/secondary_text_size"
            app:vertical_padding="1dp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="2dp" />

        <com.dd.wanandroid.ui.view.TagView
            android:id="@+id/tv_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:border_radius="4dp"
            app:border_width="1dp"
            app:horizontal_padding="4dp"
            app:layout_constraintEnd_toStartOf="@+id/tv_tag"
            app:layout_constraintStart_toEndOf="@+id/tv_top"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            app:tag_text="@string/app_new"
            app:tag_textColor="@color/white"
            app:tag_textSize="@dimen/secondary_text_size"
            app:vertical_padding="1dp"
            tools:ignore="MissingConstraints" />

        <com.dd.wanandroid.ui.view.TagView
            android:id="@+id/tv_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:border_color="@color/colorPrimary"
            app:border_radius="4dp"
            app:border_width="1dp"
            app:horizontal_padding="4dp"
            app:layout_constraintEnd_toStartOf="@+id/iv_collect"
            app:layout_constraintStart_toEndOf="@+id/tv_new"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            app:tag_backgroundColor="@color/colorPrimary"
            app:tag_text="@string/app_tag_placeholder"
            app:tag_textColor="@color/white"
            app:tag_textSize="@dimen/secondary_text_size"
            app:vertical_padding="1dp"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/iv_collect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_star_none_24dp"
            app:layout_constraintStart_toEndOf="@+id/tv_tag"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            app:layout_goneMarginStart="0dp" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="@dimen/secondary_text_size"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            tools:text="一天前" />
    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>